# urdisney

./: README.md
ui/: lastdir.txt  main.py
ur5xprs/: CMakeLists.txt  concatPlans.cpp  concatPosePlans.cpp  configToPose.cpp  controlGripper.cpp  drag.cpp  dragPose.cpp  goToConfig.cpp  goToPose.cpp  hold.cpp  initIdle.cpp  jointSpaceKFCSI.cpp  package.xml  poseToConfig.cpp  principlePlanner.cpp  registerGripper.cpp  registerKeyframes.cpp  registerRobotPoses.cpp  toGripper.cpp
ur5xprs/hriStudyCDs/Disney/: allzeros.txt  complex_plan.plan  concat_command.txt  concat_pose_command.txt  config_file.txt  configsave.txt  constraint.txt  coordinate.txt  deneme_config.txt  deneme_init.txt  deneme_pose.txt  deneme_pose2.txt  deneme_pose3.txt  deneme_shootout.txt  dragPose_command.txt  drag_command.txt  drag_pose_end_command.txt  drag_pose_initial_command.txt  drag_shootout_command.txt  goto_command.txt  goto_hit.txt  gripper_closed.txt  gripper_open.txt  gripper_random.txt  hit_pose.txt  init_state.txt
ur5xprs/myLib/: animation_functions.cpp  animation_functions.h  functions.cpp  functions.h
ur5xprs/scripts/: gripper.py  mover.py  torque_force_sensor_data.py  torque_force_sensor_data_plot.py
ur5xprs/srv/: gripper.srv
